@@ -236,21 +236,21 @@
             <version>5.3.3</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.github.122006.Zircon</groupId>
-            <artifactId>javac</artifactId>
-            <version>3.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.122006.Zircon</groupId>
-            <artifactId>base</artifactId>
-            <version>3.1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.122006.Zircon</groupId>
-            <artifactId>zircon</artifactId>
-            <version>3.1.1</version>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.github.122006.Zircon</groupId>-->
+        <!--            <artifactId>javac</artifactId>-->
+        <!--            <version>3.1.1</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.github.122006.Zircon</groupId>-->
+        <!--            <artifactId>base</artifactId>-->
+        <!--            <version>3.1.1</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.github.122006.Zircon</groupId>-->
+        <!--            <artifactId>zircon</artifactId>-->
+        <!--            <version>3.1.1</version>-->
+        <!--        </dependency>-->
     </dependencies>
 
     <build>
@@ -282,7 +282,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.11.0</version>
                 <configuration>
                     <source>21</source>
                     <target>21</target>
@@ -293,9 +293,19 @@
                     <!--                                            <compilerArg>&#45;&#45;enable-preview</compilerArg>-->
                     <!--                                        </compilerArgs>-->
                     <compilerArgs>
-<!--                        <compilerArg>-Xplugin:ZrExMethod</compilerArg>-->
-<!--                        <compilerArg>-Xplugin:ZrString</compilerArg>-->
+                        <!--                        <compilerArg>-Xplugin:ZrExMethod</compilerArg>-->
+                        <!--                        <compilerArg>-Xplugin:ZrString</compilerArg>-->
                         <compilerArg>--enable-preview</compilerArg>
+                        <compilerArg>--add-exports</compilerArg>
+                        <compilerArg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</compilerArg>
+                        <compilerArg>--add-exports</compilerArg>
+                        <compilerArg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</compilerArg>
+                        <compilerArg>--add-exports</compilerArg>
+                        <compilerArg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</compilerArg>
+                        <compilerArg>--add-exports</compilerArg>
+                        <compilerArg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</compilerArg>
+                        <compilerArg>--add-exports</compilerArg>
+                        <compilerArg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</compilerArg>
                     </compilerArgs>
                     <!--                    <annotationProcessorPaths>-->
                     <!--                        <path>-->
